ThirdParty/mojoshader/unit_tests/preprocessor/errors/undef-file-twice.correct
preprocessor/errors/undef-file-twice:3: ERROR: undefining "__FILE__"
